clean up eleven classes for vaadin 7